# easy-whisper-ui

./: CMakeLists.txt  windowhelper.cpp
